...
                            <constraint firstItem="RXv-Ye-d2G" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oQE-R5-AbJ"/>
                        </constraints>
                        <connections>
                            <outlet property="tblEmployee" destination="RXv-Ye-d2G" id="xxt-lk-Vgd"/>
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" title="Dignizant Family" id="Tvf-nz-idE">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="3Za-vV-xhI">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="btnAddEmployee:" destination="BYZ-38-t0r" id="rH4-r0-Pdr"/>
                            </connections>
                        </barButtonItem>
...
            </objects>
            <point key="canvasLocation" x="735.20000000000005" y="75.112443778110944"/>
        </scene>
        <!--Add New Employee-->
        <scene sceneID="VcY-gE-wqw">
            <objects>
                <viewController storyboardIdentifier="AddEmployeeVC" title="Add New Employee" id="X6m-bb-SfS" customClass="AddEmployeeVC" customModule="EmployeeMenagementWithRealm" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="dj9-Ee-e9k" customClass="AddEmployeeView" customModule="EmployeeMenagementWithRealm" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VDu-cs-bjH">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Employee Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wo-kf-HaP">
                                                                <rect key="frame" x="20" y="8" width="295" height="19.5"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                <nil key="textColor"/>
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BNI-rS-A7b">
                                                                <rect key="frame" x="25" y="32.5" width="290" height="47.5"/>
                                                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits"/>
                                                                <connections>
                                                                    <outlet property="delegate" destination="X6m-bb-SfS" id="0gR-lO-vLB"/>
...
                                                <rect key="frame" x="20" y="315" width="335" height="50"/>
                                                <color key="backgroundColor" red="0.0" green="0.58082932229999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="3BN-en-n7W"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                <state key="normal" title="Save">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="btnSaveAction:" destination="X6m-bb-SfS" eventType="touchUpInside" id="e0o-bb-G4q"/>
                                                </connections>
                                            </button>
...
