...
            newEmployee.empName = theDelegate.mainView.txtEmpName.text!
            newEmployee.empDesignation = theDelegate.selectedDesignation
            newEmployee.empAge = theDelegate.mainView.txtEmpAge.text!
            print(newEmployee)
            AppDelegate().realm.add(newEmployee)
            
            theDelegate.alert(title: "Alert", message: "Employee \(theDelegate.mainView.txtEmpName.text ?? "") sucessfully added.")
            theDelegate.employee = newEmployee
            theDelegate.employeeID += 1
            theDelegate.mainView.txtEmpName.text = ""
            theDelegate.selectedDesignation = nil
            theDelegate.mainView.txtEmpDesignation.text = ""
            theDelegate.mainView.txtEmpAge.text = ""
...
